offlineimap (3.99.16) unstable; urgency=low

  * This is a 4.0 TRACK release, and may be unstable or in flux!
  * When sep was /, the new Maildir support code would recursively try to 
    scan ., resulting in huge paths and an eventual crash.  Fixed with
    a one-line patch to Maildir.py.  Fixes [complete.org #60].
    Closes: #191318.

 -- John Goerzen <jgoerzen@complete.org>  Tue, 29 Apr 2003 08:10:17 -0500

offlineimap (3.99.15) unstable; urgency=low

  * This is a 4.0 TRACK release, and may be unstable or in flux!
  * Backed out removal of SYNC_WITH_TIMER_TERMINATE code to deal with
    completed syncs.  Without this code, -o broke because the app would
    never terminate.  Closes: #190063.
  * Raise an exception when the status area is locked.  This will cause UIs
    to go through their normal exception handling code.  In particular, for
    the Curses.Blinkenlights interface, the Curses module will be stopped
    and the error message will be printed on the console.  Previously, this
    error message would not have been visible.  Closes: #185709.
  * Fixed a silly error relating to handling of the remotepassfile.
    Closes: #189935.
  * Made OfflineIMAP IPv6-aware.  Used the short patch from
    Adriaan Peeters <apeeters@lashout.net> in Debian bug report 186636.
    Closes: #186636.
  * autorefresh may now be a floating-point value.  Closes: #190060.

 -- John Goerzen <jgoerzen@complete.org>  Mon, 28 Apr 2003 17:30:32 -0500

offlineimap (3.99.14) unstable; urgency=low

  * This is a 4.0 TRACK release, and may be unstable or in flux!
  * Added the ability to use the top level of a Maildir as folder named
    ".".  Useful for generating Maildir trees for a Courier server.
  * Fixed the regular expression that fixes line endings to make sure to
    deal with \n\n properly.
  * Slight renaming in offlineimap.conf.minimal to clarify things.
  * Documentation updated with information about new features.
    Closes: #189771.
    + Described IMAP-IMAP syncing